# active-simulate-plan

./: .gitmodules  README.md
.github/workflows/: deploy.yml
active_simulate_plan_docs/convince_docu_example-main/: README.md
active_simulate_plan_docs/convince_docu_example-main/demopkg/: pyproject.toml
active_simulate_plan_docs/convince_docu_example-main/demopkg/src/demopkg/: __init__.py  main.py
active_simulate_plan_docs/convince_docu_example-main/demopkg/src/demopkg/demomodule/: my_demo_class.py
docs/source/: api.rst  conf.py  index.rst  tutorials.rst
docs/source/API/: interventions.InterventionApplier.rst  interventions.rst  mcts.CausalMCTS.rst  mcts.MCTSNode.rst  mcts.main.rst  pddl_builder.PDDLBuilder.rst  planner.load_scenario_data.rst  planner.main.rst  planner.rst  planner.run_fast_downward.rst  state_manager.rst
source/: api.rst  conf.py  index.rst  tutorials.rst
source/API/: interventions.create_intervention_applier.rst  mcts.load_scenario.rst  mcts.rst  pddl_builder.rst  plan_parser.PlanParser.rst  plan_parser.rst  planner.extract_target_objects.rst  reward_shaper.RewardShaper.rst  reward_shaper.rst  state_manager.StateManager.rst
src/active-plan/config/: scenario1.json  scenario2.json  scenario3.json  symbolic_state.json
src/active-plan/identification/: interventions.py  mcts.py  results_scenario1.json  reward_shaper.py  state_manager.py  test_system.py
src/simulate-plan/recovery/: pddl_builder.py  plan_parser.py  planner.py  test_recover.py
src/simulate-plan/recovery/domains/: domain_s1.pddl
(+3 files in other folders)
