[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "demopkg"
version = "0.0.1"
description = ""
readme = "README.md"
authors = [
    {name = "TODO", email = "TODO@TO.DO"},
]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3.10",
]
keywords = []
dependencies = [
]
requires-python = ">=3.7"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "pycodestyle", "flake8", "mypy", "isort", "bumpver"]

[project.scripts]
demopkg = "demopkg.main:main"

[isort]
profile = "google"